--- a/package.json
+++ b/package.json
@@ -66,11 +66,8 @@
     "sass": "^1.29.0",
     "swc-loader": "^0.1.15",
     "swr": "^1.1.2",
-    "systemjs-webpack-interop": "^2.3.7",
     "turbo": "^1.1.10",
-    "typescript": "^4.0.3",
-    "webpack": "^5.36.2",
-    "webpack-cli": "^4.7.0"
+    "typescript": "^4.0.3"
   },
   "resolutions": {
     "**/@types/react": "^16.14.5"
